<resources>
    <string name="app_name">HoHoMa</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_shopping">Shopping</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_shopsearch">Shop Search</string>
    <string name="menu_prices">Cheapest Cart</string>
    <string name="menu_others">Others</string>
    <string name="menu_help">Help</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_acc">Account</string>
    <string name="menu_settings">Settings</string>
    <string name="special_offer">Special Offer</string>
    <string name="shoppinglistheader">Einkaufsliste</string>
    <string name="otherproductsheader">weitere Produkte</string>
    <string name="myproducts">Meine Produkte</string>
</resources>
